# AEGIS

./: .gitignore  ANALISIS_PROFUNDO.md  ARCHITECTURE.md  CLAIMS_EVIDENCE.md  CRITICAL_ISSUES.md  MANIFEST.md  PAPER_DIAGONAL_SSM.md  PIPELINE.md  README.md  honest_training.py  pyproject.toml  reproduce.sh  requirements.txt
.github/workflows/: ci.yml
aegis/: __init__.py
aegis/causality/: __init__.py  cfm.py
aegis/cognition/: __init__.py  abstract_cot.py  active_inference_navigator.py  latent_mas.py  odar_expert.py
aegis/core/: __init__.py  mamba3_mimo.py
aegis/engine/: __init__.py  bgce_engine.py
aegis/geometry/: __init__.py  lorentz_layers.py
aegis/kernels/: __init__.py  cuda_kernels.py  harvester.py  reference_implementations.py  tilelang_h100.py  tilelang_production.py  triton_ssm.py
aegis/learning/: __init__.py  hjepa.py  vjepa.py
aegis/scaling/: __init__.py  scale_1_5b.py  thermodynamic_nas.py
benchmarks/: cpu_showdown.py  diagonal_scaling_law.py  fd_ssm_truncated.py  transformer_baseline.py  universal_latency_model.py
examples/: aegis_live_demo.py  causal_time_prior_demo.py  causal_vjepa_demo.py  integration_experiment.py  latent_mas_demo.py  train_algebraic_reasoning.py  train_shakespeare_tiny.py  train_traffic_anomaly.py  verified_claims_pipeline.py
experiments/: __init__.py  bench_spectral.py
tests/: run_all_tests.py  test_aegis_cyber.py  test_aegis_cyber_advanced.py  test_bgce_engine.py  test_bgce_engine_advanced.py  test_cfm.py  test_hjepa.py  test_kernels.py  test_lorentz.py  test_mamba3.py  test_vjepa.py  test_vsa.py
(+69 files in other folders)
